--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 *{margin:0; padding: 0; box-sizing: border-box; user-select: none;}
-a#goto {
-  position: absolute;
+.goto {
+  position: absolute; display: block;
   top:1rem; left:1rem; z-index: 9;
+}
+.goto a {
   text-decoration: none;
   display: inline-block;
   font-size: 1rem; color: white;
